Addition of cucumber execution profiles.

--- a/config/cucumber.yml
+++ b/config/cucumber.yml
@@ -1,3 +1,14 @@
-<% std_opts = "--format pretty -r config -r common -r models -r steps" %>
+<% std_opts  = "--format pretty -r config -r common -r models -r steps" %>
+<% rpt_opts  = "--quiet --format html --out results/specs-report.html" %>
+<% json_opts = "--quiet --format json --out results/specs-report.json" %>
 
-default: <%= std_opts %>
+<% firefox  = "BROWSER=firefox" %>
+<% headless = "BROWSER=phantomjs" %>
+
+default:   <%= std_opts %>
+report:    <%= std_opts %> <%= rpt_opts %>
+json:      <%= std_opts %> <%= json_opts %>
+dashboard: <%= std_opts %> <%= rpt_opts %> <%= json_opts %>
+
+firefox:  <%= firefox %> <%= std_opts %>
+headless: <%= headless %> <%= std_opts %>
